# JarwoSearch

./: .gitignore  README.md  config.yaml  pyproject.toml
.github/workflows/: node.js.yml
backend/: __init__.py  config.py  constants.py  logging.py  utils.py
backend/database/: __init__.py  connection.py  models.py
backend/document_handler/: converter.py
backend/endpoints/: document_handler.py  frontend_handler.py  vector_search.py
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: index.html
frontend/public/assets/js/: main-CvAd7RcD.js
frontend/src/: App.svelte  app.css  stores.js
frontend/src/routes/: Dashboard.svelte  Home.svelte
frontend/src/routes/dashboard_subpages/: Documents.svelte  Upload.svelte
migrations/versions/: 26fa81a4a179_.py  614262981be9_.py  822b9d4f4ca2_.py  a18d93b3d742_.py  a3129ecd1b3d_.py
